--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.alexandredresch</groupId>
 	<artifactId>BeforeIDie</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>BeforeIDie</name>
 	<description>Bucket List Manager</description>
 	<properties>
